fix( selfstudy-common ): 修复代码格式化问题