@@ -1,35 +1,42 @@
 package com.lxy.common.util;
 
 import cn.hutool.core.date.DateUtil;
-import cn.hutool.core.util.RandomUtil;
 import cn.hutool.core.util.StrUtil;
 import cn.hutool.extra.pinyin.PinyinUtil;
 import com.lxy.common.properties.CustomProperties;
+import jakarta.servlet.http.HttpServletResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
 
-import jakarta.servlet.http.HttpServletResponse;
-import java.io.*;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
 import java.net.URLEncoder;
-import java.nio.file.*;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.FileVisitResult;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.security.MessageDigest;
 
 /**
  * TODO
+ *
  * @author jiacheng yang.
- * @since 2022/11/10 15:25
  * @version 1.0
+ * @since 2022/11/10 15:25
  */
 
 @Component
 public class FileUtil {
 
-    private final static Logger LOG = LoggerFactory.getLogger(FileUtil.class);
-
     public static final long UPLOAD_MAX_SIZE = 50 * 1024 * 1024;
-
+    private final static Logger LOG = LoggerFactory.getLogger(FileUtil.class);
     private static final int BUFFER_SIZE = 8192;
 
     /**
@@ -59,8 +66,9 @@ public class FileUtil {
 
     /**
      * 判断一个路径是否存在,不存在则新建
-     * */
-    public static boolean judeDirExists(String path){
+     *
+     */
+    public static boolean judeDirExists(String path) {
         File dir = new File(path);
         if (!dir.exists()) {
             System.out.println("dir not exists, create it ...");
@@ -102,17 +110,18 @@ public class FileUtil {
 
     /**
      * 删除upload文件夹里的具体文件
+     *
      * @param fileName 文件名
      * @return 是否删除成功
      */
-    public static boolean deleteFileInUpload(String fileName){
+    public static boolean deleteFileInUpload(String fileName) {
         boolean flag = false;
         String filePath = CustomProperties.uploadPath + fileName;
         try {
             Path path = Paths.get(filePath);
             Files.delete(path);
             flag = true;
-        }catch (Exception e){
+        } catch (Exception e) {
             e.printStackTrace();
         }
         return flag;
@@ -121,40 +130,42 @@ public class FileUtil {
     /**
      * 删除upload文件夹及其所有文件
      */
-    public static void deleteFileAndFolderByUpload(){
+    public static void deleteFileAndFolderByUpload() {
         try {
             Path path = Paths.get(CustomProperties.uploadPath);
             Files.walkFileTree(path,
-                new SimpleFileVisitor<Path>() {
-                    // 先去遍历删除文件
-                    @Override
-                    public FileVisitResult visitFile(Path file,
-                                                     BasicFileAttributes attrs) throws IOException {
-                        Files.delete(file);
-                        LOG.error("文件被删除 : {}", file);
-                        return FileVisitResult.CONTINUE;
-                    }
-                    // 再去遍历删除目录
-                    @Override
-                    public FileVisitResult postVisitDirectory(Path dir,IOException exc) throws IOException {
-                        Files.delete(dir);
-                        LOG.error("文件夹被删除: {}", dir);
-                        return FileVisitResult.CONTINUE;
-                    }
+                    new SimpleFileVisitor<Path>() {
+                        // 先去遍历删除文件
+                        @Override
+                        public FileVisitResult visitFile(Path file,
+                                                         BasicFileAttributes attrs) throws IOException {
+                            Files.delete(file);
+                            LOG.error("文件被删除 : {}", file);
+                            return FileVisitResult.CONTINUE;
+                        }
 
-                }
+                        // 再去遍历删除目录
+                        @Override
+                        public FileVisitResult postVisitDirectory(Path dir, IOException exc) throws IOException {
+                            Files.delete(dir);
+                            LOG.error("文件夹被删除: {}", dir);
+                            return FileVisitResult.CONTINUE;
+                        }
+
+                    }
             );
-        }catch (Exception e){
+        } catch (Exception e) {
             e.printStackTrace();
         }
     }
 
     /**
      * 下载文件: file目录下的文件
+     *
      * @param response response
      * @param fileName 文件名
      */
-    public static void downloadFile(HttpServletResponse response, String fileName)  {
+    public static void downloadFile(HttpServletResponse response, String fileName) {
         InputStream in = null;
         OutputStream out = null;
         // 下载文件路径
@@ -166,7 +177,7 @@ public class FileUtil {
             response.reset();
             response.setCharacterEncoding("UTF-8");
             //告知浏览器以下载的方式打开文件，文件名如果包含中文需要指定编码
-            response.setHeader("Content-Disposition","attachment;filename="+ URLEncoder.encode(fileName,"UTF-8"));
+            response.setHeader("Content-Disposition", "attachment;filename=" + URLEncoder.encode(fileName, StandardCharsets.UTF_8));
             out = response.getOutputStream();
             //将输入流中的数据循环写入到响应输出流中，而不是一次性读取到内存，通过响应输出流输出到前端
             byte[] data = new byte[1024];
@@ -177,7 +188,7 @@ public class FileUtil {
             out.flush();
             out.close();
             in.close();
-        }catch (Exception e){
+        } catch (Exception e) {
             e.printStackTrace();
         }
     }
